[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/textures/message.png" type="Texture" id=1]
[ext_resource path="res://ui/Menu.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/flappyfont.TTF" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="New_game" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="New_game"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.0
margin_top = -227.0
margin_right = 138.0
margin_bottom = 173.0
texture = ExtResource( 1 )

[node name="Game_over" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Game_over"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -122.0
margin_top = -227.0
margin_right = 122.0
margin_bottom = -20.0
custom_constants/separation = 11
alignment = 1

[node name="Score_label" type="Label" parent="Game_over/VBoxContainer"]
margin_top = 43.0
margin_right = 244.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 1 )
text = "SCORE : 0"
align = 1

[node name="Height_score_label" type="Label" parent="Game_over/VBoxContainer"]
margin_top = 85.0
margin_right = 244.0
margin_bottom = 116.0
custom_fonts/font = SubResource( 1 )
text = "HEIGHT SCORE : 0"
align = 1
valign = 1

[node name="Restart_button" type="Button" parent="Game_over/VBoxContainer"]
margin_top = 127.0
margin_right = 244.0
margin_bottom = 164.0
custom_fonts/font = SubResource( 1 )
text = "RESTART"

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="Game_over/VBoxContainer/Restart_button" to="." method="_on_Restart_button_pressed"]
